--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "now-php@0.5.1"
+    "api/*.php": {
+      "runtime": "vercel-php@0.5.1"
     }
   }
 }
